core/src/zeit/content/cp/browser/resources/editor.css
/* ... */
.editable-area.validation-error {
  background-color: #FAE9E6;
}

.editable-area.validation-warning {
  background-color: #FFF7C4;
}

.block.validation-error > .block-inner {
  background-color: #FAE9E6;
}

.block.validation-warning > .block-inner {
  background-color: #FFF7C4;
}

.edit-bar > .locked-indicator > img {
}

.edit-bar > .edit-link {
  background-image: url('edit.png');
  padding-right: 0.5em;
}

.edit-bar > .delete-link {
  background-image: url('delete.png');
  float: right;
  padding-right: .3em;
}

.edit-bar > .edit-teaser-link {
  background-image: url('edit-teaserlist-contents.png');
}

.edit-bar > .rss-refresh-link {
  background-image: url('reload.png');
}

.edit-bar > .delete-link > .confirm-delete {
  background-color: white;
  border: 2px solid red;
  color: red;
  opacity: 0;  /* will be blended in by JS */
  position: relative;
  right: 7em;
  text-align: center;
  top: -0.1em;
  width: 6em;
  z-index: 3;
}

.edit-bar.column-separator {
  -moz-border-radius: 1em;
  border: 1px solid black;
  font-size: 0.5em;
  margin: auto;
  text-align: center;
  width: 80%;
}

#confirm-delete-overlay {
  bottom: 0;
  left: 0;
  opacity: 0;
  position: fixed;
  right: 0;
  top: 0;
}

.edit > .delete-link > .confirm-delete > a {
  color: red;
  text-transform: uppercase;
  display: block;

}

.edit-bar {
  background-color: #f2f2f2;
}

.type-teaser-bar > .block-inner > .block {
  float: left;
  width: 25%;
}

.type-teaser-bar > .block-inner > .block > .block-inner {
  margin: 1.5em 0.5em;
  padding-bottom: 2em;
}

.type-teaser-bar > .block-inner > .block > .block-inner > .edit {
  bottom: 1.25em;
  left: 1em;
  right: 1em;
}

.block-inner {
  background-color: white;
}

.type-teaser-bar > .block-inner {
  background-color: #fff;
}

.block.type-blocked {
    position: absolute;
    right: 0.5em;
}

.block.type-blocked > .block-inner {
  background-color: transparent;
  text-align: center;
}

.block.type-blocked > .block-inner > * {
  margin: 3em;
}

.block.type-blocked.mr {
  width: 49%;
}

.block.type-blocked.dmr {
  width: 74%;
}

/* dragger */

.dragger {
  margin: 0 10px;
  z-index: -1;
}


.dragger > .center {
  height: 20px;
  cursor: move;
}


/* placeholder */

.block.type-placeholder > .block-inner {
  border-style: dashed;
}

.block.type-placeholder > .block-inner > * {
  margin: 1.5em;
}

.block.type-placeholder > .block-inner > .choose-block {
  background: #f2f2f2;
  border: 1px solid black;
  display: block;
  text-align: center;
  padding: 3em 1em;
}


/* Teaser block */

.autopilot-chooser {
  bottom: 1.2em;
  cursor: pointer;
  display: block;
  height: 1em;
  margin-bottom: 0.8em;
  padding: 0.3em;
  position: absolute;
  right: 1em;
  width: 6em;
}

.autopilot-on > * {
  background-color: #d7ffda;
}

.autopilot-off > * {
  background-color: #fff1d3;
}

.autopilot-not-possible .autopilot-chooser {
  display: none;
}

.autopilot-on .autopilot-chooser {
  background: url('autopilot-on.png') no-repeat right;
}

.autopilot-off .autopilot-chooser {
  background: url('autopilot-off.png') no-repeat right;
}

.teaser-block-properties-form table.form-fields {
  width: 100%;
}

.teaser-block-properties-form .form-fields td.label {
  width: 25%;
}

.teaser-block-properties-form .form-fields td.field {
  width: 75%;
}


.teaser-block-properties-form .object-reference {
  width: 80%
}

/* Teaser visualisations */

.block.type-teaser .teaser-contents {
  min-height: 5em;
  margin: 1em;
}

.block.type-teaser .teaser {
  font-size: 0.8em;
}  

.block.type-teaser .teaser-contents > img {
  display: block;
}

.block.type-teaser .teaser > .teaserTitle {
  font-size: 1.2em;
  font-weight: bold;
}

.block.type-teaser .teaser > .supertitle,
.block.type-teaser .teaser > .teaserTitle,
.block.type-teaser .teaser > .teaserText {
  display: none;
  margin-bottom: 0.6em;
}

.block.type-teaser .teaser > .shortTeaserTitle,
.block.type-teaser .teaser > .shortTeaserText {
  display: inline;
}

.block.type-teaser .teaser:first-child > .supertitle,
.block.type-teaser .teaser:first-child > .teaserTitle,
.block.type-teaser .teaser:first-child > .teaserText {
  display: block;
}

.block.type-teaser .teaser:first-child > .shortTeaserTitle,
.block.type-teaser .teaser:first-child > .shortTeaserText {
  display: none;
}

.block.type-teaser .teaser > .supertitle,
.block.type-teaser .teaser > .shortTeaserTitle {
  color: #990000;
  font-size: 0.9em;
  font-weight: normal;
}

.leader-two-columns > img,
.leader > img {
  width: 100%;
}

.buttons > img {
  float: left;
  margin: 0.5em 1em 0.5em 0;
  width: 20%;
}

.leader-two-columns .teaser-list {
  float: left;
  width: 45%;
}

/* layout chooser */

.layout-chooser.teaser {
  border-top: 0px solid #aaa;
  margin: 0.5em;
}

.layout-chooser.teaser > .layout-inner {
  position:relative;
  border:1px solid #CCCCCC;
  float:left;
  width:175px;
  height:266px;
  margin:0 10px 10px 0;
}

.layout-chooser.teaserbar > .layout-inner {
  height: 30%;
}
	
.layout-chooser > .layout-inner > a {
  display: block;
  margin: 0;
  opacity: 0.5;
}

.layout-chooser > .layout-inner > a.selected,
.layout-chooser > .layout-inner > a:hover {
  opacity: 1;
  background-color: inherit;
}


.layout-chooser > .layout-inner > a > img {
  border:0 solid #888888;
  position: absolute;
  margin: 58px 0px 0px 6px;
  display:block;
  width:160px;
}

.layout-chooser > .layout-inner > a > span {
  background-color:#CCCCCC;
  display:block;
  padding:3px;
  width:170px;
  height: 47px;
  margin-top: 0px;
  position:absolute;
}

/* Teaser list editing */

.teaser-list-edit-box > ol {
  list-style: none;
  padding: 0;
}

.teaser-list-edit-box > ol > li {
  clear: both;
  display: block;
  height: 1.5em;
  padding: 0.4em 0.5em;
}

.teaser-list-edit-box > ol > li.even {
  background-color: #f2f2f2;
}

.teaser-list-edit-box > ol > li > div {
  cursor: move;
}

/* XML block */

.xml-block {
  overflow: hidden;
  white-space: nowrap;
}
/* ... */

